--- a/web/page.html
+++ b/web/page.html
@@ -9,6 +9,10 @@
 <body>
 
     <div class="container">
+
+        <div class="navbar">
+            <p style="color: whitesmoke">Search:</p>
+        </div>
         
         <div class="menu">
             <img id="icon" src="/static/groupie_icon.jpg" alt="GT Icon">
