--- a/web/page.html
+++ b/web/page.html
@@ -18,6 +18,12 @@
             <img id="icon" src="/static/groupie_icon.jpg" alt="GT Icon">
             <br>
             <p style="color: whitesmoke">Filter here:</p>
+            <form action="/filter" method="post">
+                <button type="submit" value="Entrer"> Apply filters </button>
+            </form>
+            <form action="/" method="post">
+                <button type="submit" value="Entrer"> Remove filters </button>
+            </form>
         </div>
     
         <div class="grid">
