--- a/web/page.html
+++ b/web/page.html
@@ -9,15 +9,44 @@
 <body>
 
     <div class="container">
-
-        <div class="navbar">
-            <p style="color: whitesmoke">Search:</p>
-        </div>
         
         <div class="menu">
             <img id="icon" src="/static/groupie_icon.jpg" alt="GT Icon">
             <br>
-            <p style="color: whitesmoke">Filter here:</p>
+            <p style="color: whitesmoke">Filters</p>
+                <button class="Apply">Apply</button>
+
+            <p style="color: whitesmoke">Creation Date</p>
+                <div class="creation">
+                    <button class="minus">-</button>
+                    <p style="color:whitesmoke">[insert year]</p>
+                    <button class="plus">+</button>
+                </div>
+
+            <p style="color: whitesmoke">First Album Release</p>
+                <div class="album">
+                    <button class="minus">-</button>
+                    <p style="color:whitesmoke">[insert year]</p>
+                    <button class="plus">+</button>
+                </div>
+
+            <p style="color: whitesmoke">Amount of Members</p>
+                <div class="members">
+                    <input type="range" id="members" name="Members" min="1" max="10" />
+                </div>
+
+            <p style="color: whitesmoke">Concert Locations</p>
+            <!-- WE HAVE TO FIX THIS NEXT TIME !!! Dropdown not working :( -->
+                <div class="dropdown">
+                    <span>Mouse over me</span>
+                    <div class="dropdown-content">
+                      <p>Hello World!</p>
+                    </div>
+                </div>
+        </div>
+
+        <div class="navbar">
+            <p style="color: whitesmoke">Search:</p>
         </div>
     
         <div class="grid">
