Border glitch fixed

--- a/web/page.html
+++ b/web/page.html
@@ -20,7 +20,7 @@
                 <div class="creation">
                     <button class="minus">-</button>
                     <p style="color:whitesmoke">[insert year]</p>
-                    <button class="plus">+</button>
+                    <button class="plus">+</butborder: 7px solid rgba(38, 10, 112);ton>
                 </div>
 
             <p style="color: whitesmoke">First Album Release</p>
@@ -52,7 +52,7 @@
         <div class="grid">
             {{range .}}
                 <div class="grid-item">
-                    <img src={{.Image}}>
+                    <img class="img" src={{.Image}}>
                     <p> {{.Name}} </p> 
                     <p> Creation in {{.CreationDate}} </p>
                     <p> Debut Album on {{.FirstAlbum}} </p>
