Fix routes + Creation date filter

--- a/web/inspect.html
+++ b/web/inspect.html
@@ -7,12 +7,15 @@
 </head>
 
 <body>
+    
+    <form action="/" method="post">
+        <button type="submit"> Back </button>
+    </form>
 
     <img class="img" src={{.Image}}>
     <p> {{.Name}} </p> 
     <p> Creation in {{.CreationDate}} </p>
     <p> Debut Album on {{.FirstAlbum}} </p>
-    <p> {{.ID}} </p>
 
 </body>
 
